15. Always use square aspect ratio for cover image area, whn rounding add
    background if necessary.
16. For landscape now-playing text uses more space depending upon cover width.
17. Fix biography, etc, showing in actions menu for 'Compilations' section.
18. Only add bottom padding for iOS if running as web-app.
19. In now-playing optionally show "Performed by " (etc.) prefixes for artists.

3.4.5
-----
1. Remove certain actions from browse-view playlist tracks if playlist has
   more than 250 tracks.
2. Convert all now-playing PNG covers to JPG (if rounding covers).
3. Fix adding duplicate 'l' tag for certain queries.
4. Semi-transparent fill for image squares.

3.4.4
-----
1. Fix duplicate covers in 'Manage payers' dialog.
2. Fix custom favourite icons being replaced with default cover.
3. Incrementally load playlist track listing, use LMS's "Items Per Page"
   setting to control batch size. (Will be changed to Material-specific config
   item for 3.5.0)
4. Only allow editing (in 'Browse' view) of playlists of 250 (or less) tracks.
5. Use custom 'no cover' image in 'Manage players' dialog.

3.4.3
-----
 1. Round corners of images in song information.
 2. Always show queue duration under track count.
 3. Use negative number to indicate count/time remaining for queue as per
    now-playing.
 4. Clear selections on 'Esc'
 5. Reduce rounding of now-playing image for lower dpi screens.
 6. Slightly reduce rounding of covers in lists.
 7. Add traditional Chinese translation - thanks to jwchen119
 8. Treat images in 'Apps' as per this in 'Radio' - i.e. do not force square.
 9. Disable rounded corners via "?square" URL query parameter - to be replaced
    by UI setting in 3.5.0
10. Request JPG cover-art from LMS for now-playing, so that transparent
    backgrounds are black.
11. Add custom default radio icon.
12. Use material album icon for no-cover image.

3.4.2
-----
1. Fix long-press on queue duration opening queue transfer dialog.